# Montgomery-Benchmarks

./: .gitignore  Cargo.toml  benchmark_data.csv  generate_assembly.sh  opcode_stats.sh  plotting.py
benches/: bench_mont_mult_barebones.rs  my_benchmark.rs
examples/: ark-multiplication.rs  ark-squaring.rs  bare_bones.rs  montgomery_mult_ark.rs  simple.rs
src/: a_mult.rs  ari_cios.rs  arkworks_cios.rs  arkworks_sos.rs  constants.rs  fa.rs  ingo_sky_scraper_cios.rs  lib.rs  logjumps.rs  main.rs  optimised_cios.rs  world_coin_single.rs  y_cios_opt.rs  y_mult_opt.rs  yuval_mult.rs
tests/: montgomery_interoperability.rs
