[package]
name = "minimal_mult"
version = "0.1.0"
edition = "2024"

[dependencies]
seq-macro = "0.3.5"
ark-std = { version = "0.5.0", default-features = false }
primitive-types = "0.13.1"
indicatif = "0.18"
# ark-ff = {path = "../arkworks-algebra/ff"} 
# ark-ff-macros = {path = "../arkworks-algebra/ff-macros"}
ark-ff = { git = "https://github.com/abiswas3/arkworks-algebra.git", branch = "yuvals-mont-mult" }
ark-ff-macros = { git = "https://github.com/abiswas3/arkworks-algebra.git", branch = "yuvals-mont-mult" }
rand = "0.9"
[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "bench_mont_mult_barebones"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true
